--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2011-09-02  DavidAnderson <davea42@earthlink.net>
+     * dwarfdump.O, dwarfdump2.O: latest version.
 2011-06-12  DavidAnderson <davea42@earthlink.net>
      * dwarfextract: Inserting more thorough test code
        into runtests.sh script and adding new baselines
