--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-08  DavidAnderson <davea42@earthlink.net>
+     * DWARFTEST.sh now does some tests of options that
+       were previously not tested. Just -S and -W are not
+       tested yet.
 2011-09-16  DavidAnderson <davea42@earthlink.net>
      * Adding new test cases which exposed incomplete handling
        of elf objects with mistakes in an Elf section header
