--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2011-10-30  DavidAnderson <davea42@earthlink.net>
+     * dwarfdump.O, dwarfdump2.O: latest version.
 2011-10-24  DavidAnderson <davea42@earthlink.net>
      * Added tests so we test all the options that
        allow URI input with URI input.
