--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-12-14  DavidAnderson <davea42@earthlink.net>
+     * dwarfdump.O, dwarfdump2.O: latest version.
+       Added support for DW_OP_GNU operators
+       and latest GNU generated dwarfgen to demonstrate
+       we no longer abort when reading DWARF generated
+       by gcc 4.6.1 .
 2011-12-13  DavidAnderson <davea42@earthlink.net>
      * dwarfdump.O, dwarfdump2.O: latest version.
        The major change is missing line columns show as zero not -1,
