Adding test of vlasceanu directory, showing bad DWARF from the clang version 2.9 compiler and how libdwarf/dwarfdump respond to the bad dwarf.

--- a/vlasceanu/README
+++ b/vlasceanu/README
@@ -14,8 +14,19 @@ const.o
 a.out  
 
 If these use the form DW_FORM_addr, do they do so correctly?
+  Answer: NO, at least not on DW_AT_stmt_list
 Does dwarfdump or libdwarf handle it correctly?
+  Answer: Given it is malformed DWARF libdwarf
+          properly reports an error.
 
-That FORM is not a reference, so dwarf_global_formref()
+That DW_FORM_addr is not a reference, so dwarf_global_formref()
 won't read it.  DWARF2 documented that form confusingly
 and incorrectly, DWARF3 and later are the appropriate references.
+
+Clang 2.9 also generates incorrect attributes on DW_TAG_friend.
+
+The following bug reports deal with the mistakes libdwarf
+finds in the generated DWARF.
+
+http://llvm.org/bugs/show_bug.cgi?id=9995
+http://llvm.org/bugs/show_bug.cgi?id=11695
