--- a/dwgena/README
+++ b/dwgena/README
@@ -1,5 +1,5 @@
 
-dwarfgen-bin is an executable to use for testing...dwasfgen.
+dwarfgen-bin is an executable to use for testing...dwarfgen.
 Don't recreate dwarfgen-bin unless you have to.
 Keep it unchanging.
 
