--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,6 @@
-2012-11-29  DavidAnderson <davea42@earthlink.net>
-     * Updated the dwgena test baselines to reflect the
-       newly-correct reporting of form-flag flag value
-       reporting.
-2012-11-15  DavidAnderson <davea42@earthlink.net>
-     * New tests of new dwarfdump options. gcc changed
-       so some baseline data had to change. Updated
-       per the new gcc attributes used.
-2012-01-23  DavidAnderson <davea42@earthlink.net>
-     * Added enciso6 directory with an example of
-       a loclist with an address-selection entry.
+2012-01-25  DavidAnderson <davea42@earthlink.net>
+     * Added libc6fedora18 directory with an x86_64
+       debug libc that coredumps dwarfdump as of the 20121130
+       release.
+2012-01-16  DavidAnderson <davea42@earthlink.net>
+     * A new year starts.
