Completed tests of 26Jan 2013 release, updated dwarfdump[2].O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2012-01-26  DavidAnderson <davea42@earthlink.net>
+     * updated dwarfdump2.O dwarfdump.O with latest.
 2012-01-25  DavidAnderson <davea42@earthlink.net>
      * updated dwarfdump2.O dwarfdump.O with latest.
 2012-01-25  DavidAnderson <davea42@earthlink.net>
