--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-02-03  DavidAnderson <davea42@earthlink.net>
+     * In RUNALL.sh, a temp file was not getting deleted,
+       now it is.
 2012-01-31  DavidAnderson <davea42@earthlink.net>
      * configure.in: Now it simply looks for a dwarfdump*.O
        and dwarfdump2*.O to make them the dwarfdump[2].O
