Now tests simpleexample code and DW_AT_high_pc as a constant. New tests of DW_AT_high_pc as const and address. New dwarf_highpc_b() function. New producer functions allowing simple sleb and uleb creations for any attribute are tested too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-08-13  DavidAnderson <davea42@earthlink.net>
+     * DWARFTEST.sh: Add offsetfromlowpc/runtests.sh to test.
+     * offsetfromlowpc:  Directory  with tests
+       verifying correctness of dwarf_highpc() and 
+       dwarf_highpc_b() and dwarfgen and
+       simplereader.
 2013-08-09  DavidAnderson <davea42@earthlink.net>
      * shopov1/main.exe: New test object for FORM_string
        in debug_types.
