--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-2013-08-13  DavidAnderson <davea42@earthlink.net>
-     * DWARFTEST.sh: Add offsetfromlowpc/runtests.sh to test.
-     * offsetfromlowpc:  Directory  with tests
-       verifying correctness of dwarf_highpc() and 
-       dwarf_highpc_b() and dwarfgen and
-       simplereader.
+2013-10-31  DavidAnderson <davea42@earthlink.net>
+     * dwarfgena/test<n>.base.gz: New baselines
+       due to adding more coverage to dwarfgen.
+       CU-local references now handled.
+     * dwarfgena/runtest.sh: Added echo lines to make it clearer
+       to run the test by hand.
 2013-08-09  DavidAnderson <davea42@earthlink.net>
      * shopov1/main.exe: New test object for FORM_string
        in debug_types.
