New baselines for these tests: fixed dwarfdump for debugfission. debugfission/archivedwo-iMvvv.base.gz debugfission/archivedwo.base.gz debugfission/targetdwo.base.gz
New baseline dwarfdump executables.
dwarfdump-x86-ubuntu-13.04.O
dwarfdump-x86_64-ubuntu-13.04.O
dwarfdump2-x86-ubuntu-13.04.O
dwarfdump2-x86_64-ubuntu-13.04.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-18  David Anderson
+     * *x86*.O: new baseline dwarfdump for x86 and x86 64 Ubunutu.
+     * debugfission: updated baseline data for the test cases.
 2014-05-08  David Anderson
      * dwarfextract/basecstdout.base,dwarfextract/dwarfextract.c,
        dwarfextract/runtests.sh: Small changes to
