Update freebsd baseline executable to match current . dwarfdump-i386-freebsd-9.1.O dwarfdump-x86_64-freebsd-9.1.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,4 @@
 2015-01-01  David Anderson
-     *	A new year begins.
+     *  dwarfdump-i386-freebsd-9.1.O,dwarfdump-x86_64-freebsd-9.1.O:
+        freebsd baseline executable updated.
+
