--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2015-01-18  David Anderson
+     * Adding support for debugfission. See emre3/a.out.dwp
 2015-01-05  David Anderson
      * dwarfdump-x86_64-ubuntu-13.04.O, dwarfdump-x86-ubuntu-13.04.O:
        Renamed, removing the -13.04 from the name.
