New tests in diederen2 and in williamson directories. New baseline .O executables.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-02-04  David Anderson
+     * adding new tests, diederen2 directory. And a new test
+       in williamson directory. Thanks to Edward Williamson
+       and Arnaud Diederen for these great little test objects.
 2015-01-18  David Anderson
      * Adding support for debugfission. See emre3/a.out.dwp
 2015-01-05  David Anderson
