Errors in runtest.sh meant the baseline was not properly updated. debugfission/archiveo.base.gz debugfission/runtest.sh debugfission/targeto.base.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2015-09-15  David Anderson
+     * debugfission/runtest.sh: Typos in the script
+       meant test base not properly updated.
+2015-09-15  David Anderson
      * DWARFTEST.sh: changed rm to rm -f as we expect
        the temporary files involved to be missing at times.
 2015-09-11  David Anderson
