--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,14 @@
+2015-10-05  David Anderson
+     * Refactored line table code and added new interfaces to libdwarf.
+       Those are tested now along with two-level line tables.
+     * dwarfdump-i386-freebsd-9.1.O,dwarfdump-x86-ubuntu.O,
+       dwarfdump-x86_64-freebsd-9.1.O,dwarfdump-x86_64-ubuntu.O:
+       New baseline executables.
 2015-09-24  David Anderson
      * DWARFTEST.sh: Removed spurious letter a.
      * debugfission/archiveo.base.gz: new baseline
      * debugfission/targeto.base.gz: newbaseline
 
-     * dwarfdump-i386-freebsd-9.1.O,dwarfdump-x86-ubuntu.O,
-       dwarfdump-x86_64-freebsd-9.1.O,dwarfdump-x86_64-ubuntu.O:
-       New baseline executables.
      * dwarfextract/dwarfextract.c: Fixed a line to avoid
        compiler warning.
      
