--- a/hughes/README
+++ b/hughes/README
@@ -11,5 +11,8 @@ which is referred to in a .gnu_debugaltlink section.
 
 The alternate image is here, named krb5-1.11.3-38.fc20.x86_64  
 
+To get full output, use -x tied=krb5-1.11.3-38.fc20.x86_64
+
 David Anderson.
 January 31, 2014.
+Updated Oct 15, 2015.
