--- a/augmentation/README
+++ b/augmentation/README
@@ -5,7 +5,14 @@ an augmentation error
 
 dwarf_get_fde_list:  DW_DLE_FRAME_AUGMENTATION_UNKNOWN(195) (195)
 
-This from Gerald T. Rigdon.
+Elf2xml_fid_validation.elf is smaller but with the same issue.
+To see the augmentation on either just use  recent
+dwarfdump and do
+     dwarfdump -i -vvv a.out
+or
+     dwarfdump -i -vvv Elf2xml_fid_validation.elf
+
+These from Gerald T. Rigdon.
 
 
 DavidA Dec 8, 2015
