DWARFTEST.sh: Added START where it was ommitted after =====  dwarfextract/dwarfextract.c: Add #defines so the test will build        with bfd.h on FreeBSD  10.2  legendre/RUNTEST.sh: gcc->cc so this works on FreeBSD 10 too.  test-alex2/RUNTEST: gcc->cc so this works on FreeBSD 10 too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,9 @@
+2016-01-15  David Anderson
+     * DWARFTEST.sh: Added START where it was ommitted after =====
+     * dwarfextract/dwarfextract.c: Add #defines so the test will build
+       with bfd.h on FreeBSD  10.2
+     * legendre/RUNTEST.sh: gcc->cc so this works on FreeBSD 10 too.
+     * test-alex2/RUNTEST: gcc->cc so this works on FreeBSD 10 too.
+
 2016-01-12  David Anderson
      * A new year starts.
