hughes2 directory created and used for ensuring libdwarf responds properly in case of error.
CLEANUP
DWARFTEST.sh

Made sure all start with #!/bin/sh
debugfissionb/runtest.sh
dwgena/runtest.sh
findcu/runtest.sh
frame1/runtest.sh
hughes2/README
hughes2/hne.base
hughes2/ne.base
hughes2/runtest.sh
legendre/runtest.sh
moore/runtest.sh
offsetfromlowpc/runtest.sh
sandnes2/runtest.sh
test-alex1/runtest.sh
test-alex2/runtest.sh

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
+2016-03-14  David Anderson
+     * DWARFTEST.sh: hughes2 directory which uses simplereader
+       to verify that the various error recovery possibilities
+       all work.
+     * */runtest.sh: ensured all start with #!/bin/sh
 2016-01-15  David Anderson
-     * DWARFTEST.sh: Added START where it was ommitted after =====
      * dwarfextract/dwarfextract.c: Add #defines so the test will build
        with bfd.h on FreeBSD  10.2
      * legendre/RUNTEST.sh: gcc->cc so this works on FreeBSD 10 too.
