Extra cleanup added. 	modified:   CLEANUP
Make all these consistent with NLIZE=y env var
	modified:   DWARFTEST.sh
	modified:   dwarfextract/runtest.sh
	modified:   findcu/cutest.c
	modified:   findcu/runtest.sh
	modified:   frame1/runtest.sh
	modified:   hughes2/runtest.sh
	modified:   legendre/runtest.sh
	modified:   test-alex1/runtest.sh

Make local var i unsigned for consistency with
the relevant calls.
	modified:   test_dwarfnames.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-09-24  David Anderson
+  * DWARFTEST.sh: Now if one does export NLIZE=y 
+    the build will use
+    -fsanitize=address in all compiles. Thus
+    getting checking for out of bounds references,
+    memory leaks, and more. A few checks would
+    always fail so those are not run with NLIZE=y.
 2016-08-23  David Anderson
   * To keep the .O version working (after upgrading from 14.04 to 16.04)
     had to "cd /usr/lib/x86_64-linux-gnu ; sudo ln -s libelf.so libelf.so.0"
