Add new tests into test script. DWARFTEST.sh
New baselines.
dwarfdump-i386-freebsd.O
dwarfdump-i386-ubuntu.O
dwarfdump-x86_64-freebsd.O
dwarfdump-x86_64-ubuntu.O

Fixes to make this valid python3.
usertime.py

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2016-11-04  David Anderson
+  * usertime.py: Fixed incomplete conversion to python3.
 2016-10-07  David Anderson
   * DWARFTEST.sh: Adds a test of sarubbo/test1112.crashes, a
     new test exposing a unique bug in handling a corrupted
