Adding emre6 test cases. 	modified:   DWARFTEST.sh
New baselines
modified:   dwarfdump-i386-freebsd.O
modified:   dwarfdump-i386-ubuntu.O
modified:   dwarfdump-x86_64-freebsd.O
modified:   dwarfdump-x86_64-ubuntu.O

Improved commentary
modified:   emre6/README

--- a/emre6/README
+++ b/emre6/README
@@ -1,4 +1,15 @@
-Emre Kultursay provided tese tests March 4.
+Emre Kultursay provided these tests March 4, 2017.
 
 There were problems with location lists (in dwarf_loc2.c)
 which he noticed via these testcases.
+
+Before March 4 the result of
+dwarfdump -i  class_64_opt_fpo_split.dwp
+
+was
+dwarf_get_loclist_c:  DW_DLE_POINTER_SECTION_UNKNOWN (344)
+
+After the fix the run proceeds to a normal end.
+
+
+
