--- a/marcel/README
+++ b/marcel/README
@@ -1,4 +1,4 @@
 This is a series of heap overflows reported
-21 March 2017 by Marcel Bohme.
+21 March 2017 by Marcel Bohme and Van-Thuan Pham.
 
 These are fuzzed binaries.
