New baseline executables that remove the need to run sed in DWARFTEST.sh. That reduces the time to run a test. Test time reduced from 77 minutes to 23 minutes (on one test machine, for example).
DWARFTEST.sh
README.txt
dwarfdump-i386-freebsd.O
dwarfdump-i386-ubuntu.O
dwarfdump-x86_64-freebsd.O
dwarfdump-x86_64-ubuntu.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-03-24  David Anderson
+  * DWARFTEST.sh: unifyddname now just renames files. No
+    need for sed to remove the .O from the program name
+    dwarfdump prints.  See code/dwarfdump/NEWS or
+    code/dwarfdump/ChangeLog.
 2017-03-22  David Anderson
   * DWARFTEST.sh: Added tests for marcel directory testcases.
   * RUNALL.sh: Added code to compute number of minutes wall clock
